:sparkles: druid agg and basic querier resolves #46
